--- a/package.json
+++ b/package.json
@@ -1,14 +1,29 @@
 {
-  "name": "ntfs",
+  "name": "nftreact",
+  "homepage": "https://muhammadhassan47.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/material": "^5.3.1",
+    "@mui/styled-engine-sc": "^5.3.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
+    "bootstrap": "^5.1.3",
+    "gh-pages": "^3.2.3",
+    "local-storage-fallback": "^4.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.4",
+    "styled-components": "^5.3.3",
+    "styled-theming": "^2.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +49,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.16"
   }
 }
