--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nftreact",
-  "homepage": "https://muhammadhassan47.github.io",
+  "homepage": "https://muhammadhassan47.github.io/nftreact",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
@@ -15,7 +15,6 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
-    "gh-pages": "^3.2.3",
     "local-storage-fallback": "^4.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -27,6 +26,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -52,6 +53,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
+    "gh-pages": "^3.2.3",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.16"
   }
